vpc.tf
resource "aws_vpc" "main" {
    cidr_block= "10.0.0.0/16"
}

resource "aws_subnet" "public1" {
    vpc_id= aws_vpc.main.id
    cidr_block= '10.0.1.0/24"
    availability_zone= "ap-south-1a'
}

resource "aws_subnet" "public2" {
    vpc_id= aws_vpc.main.id
    cidr_block= '10.0.2.0/24"
    availability_zone= "ap-south-1b'
}

resource "aws_subnet" "private1" {
    vpc_id= aws_vpc.main.id
    cidr_block= '10.0.3.0/24"
    availability_zone= "ap-south-1a'
}

resource "aws_subnet" "private2" {
    vpc_id= aws_vpc.main.id
    cidr_block= '10.0.4.0/24"
    availability_zone= "ap-south-1b'
}

resource "aws_internet_gateway" "igw"{
    vpc_id= aws_vpc.main.id
}

resource "aws_route_table" "public"{
    vpc_id= aws_vpc.main.id

    route{
        cidr_block= "0.0.0.0/0"
        gateway_id= aws_internet_gateway.igw.id
    }
}

resource "aws_route_table_association" "public1" {
    subnet_id= aws_subnet.public1.id
    route_table_id= aws_route_table.public.id
}

resource "aws_route_table_association" "public2" {
    subnet_id= aws_subnet.public2.id
    route_table_id= aws_route_table.public.id
}
